# consul-client

./: .travis.yml  Cargo.toml  docker-compose.yml
consul-kv/: Cargo.toml
src/: client.rs  data.rs  error.rs  kv.rs  lib.rs  status.rs
src/agent/: data.rs  query.rs  types.rs
